# PhaseSync

./: .gitignore  AI_NAVIGATION.md  Bug_report.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  PHASE_RULES.md  PHASE_SYNC_SPEC.md  Project_rules.md  Pull Request.md  Pull_Request.md  README.md  RULES.md  SECURITY.md  StartHere.md  changelog.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  testing-plan.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
PhaseSync/: API.md  CHANGELOG.md  CLI.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PhaseSync v0.1.0 Release.md  QUICKSTART.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py
PhaseSync/PhaseSync/: README.md  __init__.py  __main__.py  symbol_compressor.py  symbol_map.json  visualizer.py
PhaseSync/phasesync.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
PhaseSync/plugin/: README.md  package.json
PhaseSync/test_project/: README.md
docs/: api.md  architecture.md  coding-standards.md  component-diagram.json  data-flow.md  developer-guide.md  error-handling.md  naming-conventions.md  plugin.md  testing-plan.md  user-guide.md
extension/: .vscodeignore  PluginManifest.json  package-lock.json  package.json  phasesync-0.1.0.vsix  test_input.txt  weights.json
extension/src/: extension.ts
scripts/: setup_env.bat  setup_env.py  setup_env.sh  weight_analysis.py
src/: extension.ts
src/phasesync/: PhaseSync.py  SymbolCompressor.py  __init__.py
tests/: test_compressor.py  test_phasesync.py
(+10 files in other folders)
